...
        android:layout_centerVertical="true"
        android:layout_toStartOf="@+id/img_delete"
        android:layout_toEndOf="@+id/img_project"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lbl_task_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:lines="1"
            android:textSize="16sp"
...
